# url-shortener

./: Cargo.toml
database/: database.sqlite3
src/: main.rs
src/types/request/: generate_request.rs  mod.rs
src/types/response/: api_response.rs
