[package]
name = "url-shortener"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
uuid = { version = "0", features = ["v4"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]